--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
       "A new year, new blessings, same faithful God.",
       "Celebrate the beauty of who God made you to be.",
       "May God open doors no man can shut this year.",
-      "The Lord’s purpose will stand—blessed birthday, Vorda."
+      "The Lord’s purpose will stand—blessed birthday, Vorda.",
+      "Don't be a Lazy ass🤪"
     ];
 
     const quotes = [
@@ -116,6 +117,7 @@
       "\"He gives strength to the weary.\" – Isaiah 40:29",
       "\"My grace is sufficient for you.\" – 2 Corinthians 12:9",
       "\"With God all things are possible.\" – Matthew 19:26"
+      "\"Blessed are the lazy ass, God will soon vindicate them.\" - LA 12:2
     ];
 
     function showWish() {
