--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
 
   <div class="box quote-box">
-    <img src="img.png" class="bg-img" alt="background image" />
+    <img src="vorda.png" class="bg-img" alt="background image" />
     <h2>Faith-Filled Quote</h2>
     <p id="quote">Click the button below to reveal a spiritual birthday quote.</p>
     <button id="quoteBtn">Show Religious Quote</button>
