--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
       margin-top: 3rem;
       font-style: italic;
       color: #666;
+   }
+    #wish, #quote {
+  color: #9e2a64;
     }
   </style>
 </head>
